--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"abhijithvijayan"
 	],
 	"dependencies": {
-		"meow": "^5.0.0"
+		"meow": "^5.0.0",
+		"node-banner": "^1.3.2"
 	},
 	"devDependencies": {
 		"babel-eslint": "10.0.3",
