--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
 		"abhijithvijayan"
 	],
 	"dependencies": {
+		"import-jsx": "^3.0.0",
+		"ink": "^2.5.0",
+		"ink-select-input": "^3.1.2",
 		"meow": "^5.0.0",
-		"node-banner": "^1.3.2"
+		"node-banner": "^1.3.2",
+		"open": "^7.0.0",
+		"react": "^16.11.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "10.0.3",
