--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "abhijithvijayan",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "The Abhijith Vijayan CLI",
 	"license": "MIT",
 	"repository": "https://github.com/abhijithvijayan/abhijithvijayan",
@@ -17,7 +17,8 @@
 	},
 	"files": [
 		"cli.js",
-		"ui.js"
+		"ui.js",
+		"screenshot.png"
 	],
 	"keywords": [
 		"cli",
