--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
 	"version": "1.1.1",
 	"description": "The Abhijith Vijayan CLI",
 	"license": "MIT",
-	"repository": "https://github.com/abhijithvijayan/abhijithvijayan",
-	"author": "abhijithvijayan",
-	"bin": {
-		"abhijithvijayan": "cli.js"
+	"repository": "https://github.com/abhijithvijayan/abhijithvijayan.git",
+	"author": {
+		"name": "abhijithvijayan",
+		"email": "email@abhijithvijayan.in",
+		"url": "https://abhijithvijayan.in"
 	},
 	"engines": {
-		"node": ">=10"
+		"node": ">=10.0.0"
 	},
-	"scripts": {
-		"lint": "eslint .",
-		"lint:fix": "eslint . --fix"
+	"bin": {
+		"abhijithvijayan": "cli.js"
 	},
 	"files": [
 		"cli.js",
 		"ui.js",
 		"screenshot.png"
 	],
+	"scripts": {
+		"lint": "eslint . --ext .js",
+		"lint:fix": "eslint . --ext .js --fix"
+	},
 	"keywords": [
 		"cli",
 		"cli-app",
