--- a/package.json
+++ b/package.json
@@ -39,17 +39,19 @@
 		"react": "^16.13.0"
 	},
 	"devDependencies": {
-		"babel-eslint": "10.0.3",
-		"eslint": "^6.8.0",
-		"eslint-config-airbnb": "^18.0.1",
-		"eslint-config-onepass": "1.6.0",
-		"eslint-config-prettier": "^6.9.0",
-		"eslint-plugin-html": "^6.0.0",
-		"eslint-plugin-import": "^2.20.0",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.2",
-		"eslint-plugin-react": "^7.18.0",
-		"eslint-plugin-react-hooks": "^2.3.0",
-		"prettier": "^1.19.1"
+		"@abhijithvijayan/eslint-config": "2.5.4",
+		"@abhijithvijayan/eslint-config-airbnb": "^1.0.2",
+		"@typescript-eslint/eslint-plugin": "^3.5.0",
+		"@typescript-eslint/parser": "^3.5.0",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^7.4.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.20.3",
+		"eslint-plugin-react-hooks": "^4.0.5",
+		"prettier": "^2.0.5"
 	}
 }
